@@ -5,7 +5,7 @@ internal static class CCSPlayerControllerEx
 {
 	internal static bool IsValidPlayer(this CCSPlayerController? controller)
 	{
-		return controller != null && controller.IsValid && !controller.IsBot;
+		return controller != null && controller.IsValid && !controller.IsBot && !controller.IsHLTV;
 	}
 }
 
