@@ -1,8 +1,10 @@
 -- 2023.10.24 - V1.3.4
 
+- refactor: Optimise gamerule based functions (#39)
 - fix: Visual bugs (#43)
 - fix: Disconnect lag spike (#46)
 - fix: Bots being loaded into DB rarely (#45)
+- fix: Data load lag spikes
 
 -- 2023.10.21 - V1.3.3
 
